# personal-project-base

./: .gitignore  CHECKS  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: tests.yml
core/: settings.py  urls.py  wsgi.py
core/templates/: base.html  home.html
core/templates/users/: login.html  logout.html  profile.html  register.html
users/: forms.py  tests.py  views.py
users/migrations/: 0001_initial.py
